--- a/about.html
+++ b/about.html
@@ -89,25 +89,25 @@
 			<div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                 <ul class="navbar-nav">
 					<li><a class="nav-link " href="index.html">Home</a></li>
-                    <li><a class="nav-link active" href="about.html">AboutUS</a></li>
-                    <li><a class="nav-link " href="404.html">WayToPLAB</a></li>
+                    <li><a class="nav-link active" href="about.html">About US</a></li>
+                    <li><a class="nav-link " href="404.html">Way To PLAB</a></li>
                     <li class="dropdown"><a class="dropdown-toggle nav-link" data-toggle="dropdown" href="#">PLAB Courses</a>
                         <div class="dropdown-menu">
 							<ul>
                                 <li><a class="dropdown-item nav-link nav_item" href="course-plab1-detail.html">PLAB-1 Course</a></li>
-                                <li><a class="dropdown-item nav-link nav_item" href="course-plab1-detail.html">PLAB-2 Course</a></li>
+                                <li><a class="dropdown-item nav-link nav_item" href="course-plab2-detail.html">PLAB-2 Course</a></li>
                             </ul>
                         </div>
                     </li>
+                    <li><a class="nav-link" href="fullscholorship.html">Full Sponsorship Program</a></li>
                     <li><a class="nav-link" href="gallery.html">Gallery</a></li>
-                    <li><a class="nav-link" href="contact.html">ContactUS</a></li>
+                    <li><a class="nav-link" href="contact.html">Contact US</a></li>
                     <li class="dropdown"><a class="dropdown-toggle nav-link" data-toggle="dropdown" href="#">More</a>
                         <div class="dropdown-menu">
 							<ul>
                                 <li><a class="dropdown-item nav-link nav_item" href="#">Video</a></li>
-                                <li><a class="dropdown-item nav-link nav_item" href="login.html">Login</a></li>
-                                <li><a class="dropdown-item nav-link nav_item" href="signup.html">Sign-UP</a></li>                                                                
                                 <li><a class="dropdown-item nav-link nav_item" href="faq.html">FAQ-PLAB</a></li>
+                                <li><a class="dropdown-item nav-link nav_item" href="login.html">Admin Login</a></li>
                             </ul>
                         </div>
                     </li>
@@ -128,7 +128,6 @@
                 </div>
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item"><a href="#">Home</a></li>
-                    <li class="breadcrumb-item"><a href="#">Pages</a></li>
                     <li class="breadcrumb-item active">About Us</li>
                 </ol>
             </div>
@@ -136,7 +135,7 @@
     </div><!-- END CONTAINER-->
 </div>
 <!-- END SECTION BREADCRUMB -->
- 
+
 <!-- START SECTION ABOUT -->
 <div class="section small_pb">
     <div class="container">
