--- a/signup.html
+++ b/signup.html
@@ -82,32 +82,31 @@
     <div class="container">
         <nav class="navbar navbar-expand-lg"> 
         	<a class="navbar-brand" href="index.html"> 
-            	<img class="logo_light" src="assets/images/logo_light.png" alt="logo"> 
                 <img class="logo_dark" src="assets/images/logo_dark.png" alt="logo"> 
             </a>
           	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-expanded="false"> <span class="ion-android-menu"></span> </button>
 			<div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                 <ul class="navbar-nav">
 					<li><a class="nav-link " href="index.html">Home</a></li>
-                    <li><a class="nav-link " href="about.html">AboutUS</a></li>
-                    <li><a class="nav-link " href="404.html">WayToPLAB</a></li>
-                    <li class="dropdown"><a class="dropdown-toggle nav-link " data-toggle="dropdown" href="#">PLAB Courses</a>
+                    <li><a class="nav-link " href="about.html">About Us</a></li>
+                    <li><a class="nav-link " href="404.html">Way To PLAB</a></li>
+                    <li class="dropdown"><a class="dropdown-toggle nav-link" data-toggle="dropdown" href="#">PLAB Courses</a>
                         <div class="dropdown-menu">
 							<ul>
                                 <li><a class="dropdown-item nav-link nav_item" href="course-plab1-detail.html">PLAB-1 Course</a></li>
-                                <li><a class="dropdown-item nav-link nav_item" href="course-plab1-detail.html">PLAB-2 Course</a></li>
+                                <li><a class="dropdown-item nav-link nav_item" href="course-plab2-detail.html">PLAB-2 Course</a></li>
                             </ul>
                         </div>
                     </li>
+                    <li><a class="nav-link" href="fullscholorship.html">Full Sponsorship Program</a></li>
                     <li><a class="nav-link" href="gallery.html">Gallery</a></li>
-                    <li><a class="nav-link" href="contact.html">ContactUS</a></li>
-                    <li class="dropdown"><a class="dropdown-toggle nav-link active" data-toggle="dropdown" href="#">More</a>
+                    <li><a class="nav-link" href="contact.html">Contact US</a></li>
+                    <li class="dropdown"><a class="dropdown-toggle nav-link" data-toggle="dropdown" href="#">More</a>
                         <div class="dropdown-menu">
 							<ul>
                                 <li><a class="dropdown-item nav-link nav_item" href="#">Video</a></li>
-                                <li><a class="dropdown-item nav-link nav_item" href="login.html">Login</a></li>
-                                <li><a class="dropdown-item nav-link nav_item active" href="signup.html">Sign-UP</a></li>                                                                
                                 <li><a class="dropdown-item nav-link nav_item" href="faq.html">FAQ-PLAB</a></li>
+                                <li><a class="dropdown-item nav-link nav_item" href="login.html">Admin Login</a></li>
                             </ul>
                         </div>
                     </li>
