--- a/fullscholorship.html
+++ b/fullscholorship.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<!-- Mirrored from templatemanja.com/educone/demo/faq.html by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 28 Mar 2021 18:53:09 GMT -->
+<!-- Mirrored from templatemanja.com/educone/demo/404.html by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 28 Mar 2021 18:53:13 GMT -->
 <head>
 <!-- Meta -->
 <meta charset="utf-8">
@@ -12,7 +12,7 @@
 <meta name="keywords" content="academy, course, education, elearning, learning, education html template, university template, college template, school template, online education template, tution center template">
 
 <!-- SITE TITLE -->
-<title>ABMAPLAB-FAQ</title>
+<title>ABMAPLAB_Error</title>
 <!-- Favicon Icon -->
 <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.png">
 <!-- Animation CSS -->
@@ -42,15 +42,7 @@
 
 <body>
 
-<!-- LOADER -->
-<div id="preloader">
-    <div class="lds-ellipsis">
-        <span></span>
-        <span></span>
-        <span></span>
-    </div>
-</div>
-<!-- END LOADER --> 
+
 
 <!-- START HEADER -->
 <header class="header_wrap fixed-top dark_skin main_menu_uppercase header_with_topbar">
@@ -59,8 +51,8 @@
             <div class="row align-items-center">
                 <div class="col-md-6">
                     <ul class="contact_detail text-center text-lg-left">
-                    	<li><i class="ti-mobile"></i><span>967-088-3642</span></li>
-                    	<li><i class="ti-email"></i><span>abmaplabpltd@gmail.com</span></li>
+                    	<li><i class="ti-mobile"></i><span>123-456-7890</span></li>
+                    	<li><i class="ti-email"></i><span>contact@yourmail.com</span></li>
                     </ul>
                 </div>
                 <div class="col-md-6">
@@ -98,14 +90,14 @@
                             </ul>
                         </div>
                     </li>
-                    <li><a class="nav-link" href="fullscholorship.html">Full Sponsorship Program</a></li>
+                    <li><a class="nav-link active" href="fullscholorship.html">Full Sponsorship Program</a></li>
                     <li><a class="nav-link" href="gallery.html">Gallery</a></li>
                     <li><a class="nav-link" href="contact.html">Contact US</a></li>
-                    <li class="dropdown"><a class="dropdown-toggle nav-link active" data-toggle="dropdown" href="#">More</a>
+                    <li class="dropdown"><a class="dropdown-toggle nav-link" data-toggle="dropdown" href="#">More</a>
                         <div class="dropdown-menu">
 							<ul>
-                                <li><a class="dropdown-item nav-link nav_item " href="#">Video</a></li>
-                                <li><a class="dropdown-item nav-link nav_item active" href="faq.html">FAQ-PLAB</a></li>
+                                <li><a class="dropdown-item nav-link nav_item" href="#">Video</a></li>
+                                <li><a class="dropdown-item nav-link nav_item" href="faq.html">FAQ-PLAB</a></li>
                                 <li><a class="dropdown-item nav-link nav_item" href="login.html">Admin Login</a></li>
                             </ul>
                         </div>
@@ -118,16 +110,16 @@
 <!-- END HEADER -->
 
 <!-- START SECTION BREADCRUMB -->
-<div class="breadcrumb_section background_bg overlay_bg_50 page_title_light" data-img-src="assets/images/faq_bg.jpg">
+<div class="breadcrumb_section background_bg overlay_bg_50 page_title_light" data-img-src="assets/images/scholorhsip-bg.jpg">
     <div class="container"><!-- STRART CONTAINER -->
         <div class="row">
             <div class="col-sm-12">
                 <div class="page-title">
-            		<h1>Frequently Asked Questions</h1>
+            		<h1>Full Sponsorship Program</h1>
                 </div>
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item"><a href="#">Home</a></li>
-                    <li class="breadcrumb-item ">FAQ's</li>
+                    <li class="breadcrumb-item"><a href="#">Full Sponsorship Program</a></li>
                 </ol>
             </div>
         </div>
@@ -135,56 +127,47 @@
 </div>
 <!-- END SECTION BREADCRUMB -->
 
-<!-- START SECTION FAQ -->
-<div class="section">
-	<div class="container">
-        <div class="row">
-        	<div class="col-12 animation" data-animation="fadeInUp" data-animation-delay="0.2s">
-            	<div class="single_faq">
-                	<div class="faq_question">
-                    	<h5>How To Use Wordpress?</h5>
+<!-- START SLIDE SECTION -->
+    <div class="container">
+        <br><div class="p-3 mb-2 bg-warning text-dark"><h3 >Full Sponsorship program <script>document.write(new Date().getFullYear())</script> (full integrated consulting)–</h3></div>
+        <div class="row justify-content-center">
+            <div class="col-lg-12 col-md-10 animation" data-animation="fadeInUp" data-animation-delay="0.2s">
+                <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                      <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+                    </ol>
+                    <div class="carousel-inner">
+                      <div class="carousel-item active">
+                        <img class="d-block w-100" src="assets/images/Slide1.JPG" alt="First slide">
+                      </div>
+                      <div class="carousel-item">
+                        <img class="d-block w-100" src="assets/images/Slide2.JPG" alt="Second slide">
+                      </div>
+                      <div class="carousel-item">
+                        <img class="d-block w-100" src="assets/images/Slide3.JPG" alt="Third slide">
+                      </div>
+                      <div class="carousel-item">
+                        <img class="d-block w-100" src="assets/images/Slide4.JPG" alt="Fourth slide">
+                      </div>
                     </div>
-                    <div class="faq_answer">
-                    	<p>Lorem Ipsu. is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-                    </div>
-                </div>
-                <div class="single_faq">
-                	<div class="faq_question">
-                    	<h5>Installation and Set-Up Guide?</h5>
-                    </div>
-                    <div class="faq_answer">
-                    	<p>Lorem Ipsu. is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-                    </div>
-                </div>
-                <div class="single_faq">
-                	<div class="faq_question">
-                    	<h5>Took a galley of type unknown printer?</h5>
-                    </div>
-                    <div class="faq_answer">
-                    	<p>Lorem Ipsu. is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-                    </div>
-                </div>
-                <div class="single_faq">
-                	<div class="faq_question">
-                    	<h5>Smart Learning is an education platform partners</h5>
-                    </div>
-                    <div class="faq_answer">
-                    	<p>Lorem Ipsu. is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-                    </div>
-                </div>
-                <div class="single_faq">
-                	<div class="faq_question">
-                    	<h5>Education of Tomorrow, Rooted in Tradition</h5>
-                    </div>
-                    <div class="faq_answer">
-                    	<p>Lorem Ipsu. is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-                    </div>
-                </div>
+                    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="sr-only">Next</span>
+                    </a>
+                  </div>
             </div>
         </div>
+        <br>
     </div>
 </div>
-<!-- END SECTION FAQ -->
+<!-- END 404 SECTION -->
 
 <!-- START FOOTER -->
 <footer class="bg_dark footer_dark">
@@ -301,5 +284,5 @@
 
 </body>
 
-<!-- Mirrored from templatemanja.com/educone/demo/faq.html by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 28 Mar 2021 18:53:11 GMT -->
+<!-- Mirrored from templatemanja.com/educone/demo/404.html by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 28 Mar 2021 18:53:14 GMT -->
 </html>
