--- a/gallery.html
+++ b/gallery.html
@@ -14,7 +14,7 @@
 <!-- SITE TITLE -->
 <title>ABMAPLAB-Gallery</title>
 <!-- Favicon Icon -->
-<link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.png">
+<link rel="shortcut icon" type="image/x-icon" href="assets/images/gallery/favicon.png">
 <!-- Animation CSS -->
 <link rel="stylesheet" href="assets/css/animate.css">
 <!-- Latest Bootstrap min CSS -->
@@ -82,32 +82,31 @@
     <div class="container">
         <nav class="navbar navbar-expand-lg"> 
         	<a class="navbar-brand" href="index.html"> 
-            	<img class="logo_light" src="assets/images/logo_light.png" alt="logo"> 
                 <img class="logo_dark" src="assets/images/logo_dark.png" alt="logo"> 
             </a>
           	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-expanded="false"> <span class="ion-android-menu"></span> </button>
 			<div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                 <ul class="navbar-nav">
 					<li><a class="nav-link " href="index.html">Home</a></li>
-                    <li><a class="nav-link " href="about.html">AboutUS</a></li>
-                    <li><a class="nav-link " href="404.html">WayToPLAB</a></li>
+                    <li><a class="nav-link " href="about.html">About Us</a></li>
+                    <li><a class="nav-link " href="404.html">Way To PLAB</a></li>
                     <li class="dropdown"><a class="dropdown-toggle nav-link" data-toggle="dropdown" href="#">PLAB Courses</a>
                         <div class="dropdown-menu">
 							<ul>
                                 <li><a class="dropdown-item nav-link nav_item" href="course-plab1-detail.html">PLAB-1 Course</a></li>
-                                <li><a class="dropdown-item nav-link nav_item" href="course-plab1-detail.html">PLAB-2 Course</a></li>
+                                <li><a class="dropdown-item nav-link nav_item" href="course-plab2-detail.html">PLAB-2 Course</a></li>
                             </ul>
                         </div>
                     </li>
+                    <li><a class="nav-link" href="fullscholorship.html">Full Sponsorship Program</a></li>
                     <li><a class="nav-link active" href="gallery.html">Gallery</a></li>
-                    <li><a class="nav-link" href="contact.html">ContactUS</a></li>
+                    <li><a class="nav-link" href="contact.html">Contact US</a></li>
                     <li class="dropdown"><a class="dropdown-toggle nav-link" data-toggle="dropdown" href="#">More</a>
                         <div class="dropdown-menu">
 							<ul>
                                 <li><a class="dropdown-item nav-link nav_item" href="#">Video</a></li>
-                                <li><a class="dropdown-item nav-link nav_item" href="login.html">Login</a></li>
-                                <li><a class="dropdown-item nav-link nav_item" href="signup.html">Sign-UP</a></li>                                                                
-                                <li><a class="dropdown-item nav-link nav_item" href="faq.html">FAQ-PLAB</a></li>  
+                                <li><a class="dropdown-item nav-link nav_item" href="faq.html">FAQ-PLAB</a></li>
+                                <li><a class="dropdown-item nav-link nav_item" href="login.html">Admin Login</a></li>
                             </ul>
                         </div>
                     </li>
@@ -119,7 +118,7 @@
 <!-- END HEADER -->
 
 <!-- START SECTION BREADCRUMB -->
-<div class="breadcrumb_section background_bg overlay_bg_50 page_title_light" data-img-src="assets/images/gallery_bg.jpg">
+<div class="breadcrumb_section background_bg overlay_bg_50 page_title_light" data-img-src="assets/images/gallery/gallery_bg.jpg">
     <div class="container"><!-- STRART CONTAINER -->
         <div class="row">
             <div class="col-sm-12">
@@ -128,7 +127,6 @@
                 </div>
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item"><a href="#">Home</a></li>
-                    <li class="breadcrumb-item"><a href="#">Pages</a></li>
                     <li class="breadcrumb-item ">Gallery</li>
                 </ol>
             </div>
@@ -146,9 +144,9 @@
                 	<li class="grid-sizer"></li>
                     <li class="grid_item brands adv">
                     	<div class="image_gallery_item">
-                            <a href="assets/images/gallery_item1.jpg">
+                            <a href="assets/images/gallery/gallery_item1.jpg">
                                 <div class="gallery_img">
-                                    <img src="assets/images/gallery_small_item1.jpg" alt="image">
+                                    <img src="assets/images/gallery/gallery_small_item1.jpg" alt="image">
                                 </div>
                                 <div class="gallary_hover_box">
                                     <i class="ti-zoom-in"></i>
@@ -158,9 +156,9 @@
                     </li>
                     <li class="grid_item brands design">
                     	<div class="image_gallery_item">
-                            <a href="assets/images/gallery_item2.jpg">
+                            <a href="assets/images/gallery/gallery_item2.jpg">
                                 <div class="gallery_img">
-                                    <img src="assets/images/gallery_small_item2.jpg" alt="image">
+                                    <img src="assets/images/gallery/gallery_small_item2.jpg" alt="image">
                                 </div>
                                 <div class="gallary_hover_box">
                                     <i class="ti-zoom-in"></i>
@@ -170,9 +168,9 @@
                     </li>
                     <li class="grid_item brands web">
                     	<div class="image_gallery_item">
-                            <a href="assets/images/gallery_item3.jpg">
+                            <a href="assets/images/gallery/gallery_item3.jpg">
                                 <div class="gallery_img">
-                                    <img src="assets/images/gallery_small_item3.jpg" alt="image">
+                                    <img src="assets/images/gallery/gallery_small_item3.jpg" alt="image">
                                 </div>
                                 <div class="gallary_hover_box">
                                     <i class="ti-zoom-in"></i>
@@ -182,9 +180,9 @@
                     </li>
                     <li class="grid_item design">
                     	<div class="image_gallery_item">
-                            <a href="assets/images/gallery_item4.jpg">
+                            <a href="assets/images/gallery/gallery_item4.jpg">
                                 <div class="gallery_img">
-                                    <img src="assets/images/gallery_small_item4.jpg" alt="image">
+                                    <img src="assets/images/gallery/gallery_small_item4.jpg" alt="image">
                                 </div>
                                 <div class="gallary_hover_box">
                                     <i class="ti-zoom-in"></i>
@@ -194,9 +192,9 @@
                     </li>
                     <li class="grid_item brands adv">
                     	<div class="image_gallery_item">
-                            <a href="assets/images/gallery_item5.jpg">
+                            <a href="assets/images/gallery/gallery_item5.jpg">
                                 <div class="gallery_img">
-                                    <img src="assets/images/gallery_small_item5.jpg" alt="image">
+                                    <img src="assets/images/gallery/gallery_small_item5.jpg" alt="image">
                                 </div>
                                 <div class="gallary_hover_box">
                                     <i class="ti-zoom-in"></i>
@@ -206,9 +204,9 @@
                     </li>
                     <li class="grid_item design adv">
                     	<div class="image_gallery_item">
-                            <a href="assets/images/gallery_item6.jpg">
+                            <a href="assets/images/gallery/gallery_item6.jpg">
                                 <div class="gallery_img">
-                                    <img src="assets/images/gallery_small_item6.jpg" alt="image">
+                                    <img src="assets/images/gallery/gallery_small_item6.jpg" alt="image">
                                 </div>
                                 <div class="gallary_hover_box">
                                     <i class="ti-zoom-in"></i>
@@ -218,9 +216,9 @@
                     </li>
                     <li class="grid_item design adv">
                     	<div class="image_gallery_item">
-                            <a href="assets/images/gallery_item7.jpg">
+                            <a href="assets/images/gallery/gallery_item7.jpg">
                                 <div class="gallery_img">
-                                    <img src="assets/images/gallery_small_item7.jpg" alt="image">
+                                    <img src="assets/images/gallery/gallery_small_item7.jpg" alt="image">
                                 </div>
                                 <div class="gallary_hover_box">
                                     <i class="ti-zoom-in"></i>
@@ -230,9 +228,9 @@
                     </li>
                     <li class="grid_item design adv">
                     	<div class="image_gallery_item">
-                            <a href="assets/images/gallery_item8.jpg">
+                            <a href="assets/images/gallery/gallery_item8.jpg">
                                 <div class="gallery_img">
-                                    <img src="assets/images/gallery_small_item8.jpg" alt="image">
+                                    <img src="assets/images/gallery/gallery_small_item8.jpg" alt="image">
                                 </div>
                                 <div class="gallary_hover_box">
                                     <i class="ti-zoom-in"></i>
@@ -242,9 +240,9 @@
                     </li>
                     <li class="grid_item design adv">
                     	<div class="image_gallery_item">
-                            <a href="assets/images/gallery_item9.jpg">
+                            <a href="assets/images/gallery/gallery_item9.jpg">
                                 <div class="gallery_img">
-                                    <img src="assets/images/gallery_small_item9.jpg" alt="image">
+                                    <img src="assets/images/gallery/gallery_small_item9.jpg" alt="image">
                                 </div>
                                 <div class="gallary_hover_box">
                                     <i class="ti-zoom-in"></i>
@@ -267,7 +265,7 @@
     			<div class="col-xl-5 col-md-8 col-sm-5">
     				<div class="widget">
     					<div class="footer_logo"> 
-                        	<a href="index.html"><img src="assets/images/logo_light.png" alt="logo"/></a> 
+                        	<a href="index.html"><img src="assets/images/gallery/logo_light.png" alt="logo"/></a> 
                         </div>
     					<p>If you are going to use a passage of Lorem Ipsum you need to be sure there isn't anything embarrassing hidden in the middle of text</p>
     				</div>
